--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="Index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Pages/Projects.html">Existing-Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Pages/Projects.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="Pages/Contact-me.html">Contact-us</a></li>
                     <li class="nav-item"><a class="nav-link" href="Pages/Rally-and-Motorsport-Events.html">Rally/Motorsport events</a></li>
                 </ul>
