--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <h1 class="display-4">Jetson's retro autoshop</h1>
-                    <p class="lead">Here at "company name" we specialise in the restoration of older/classic cars. Our team transforms former automotive legends back into their old selves. Work with us to preserve the memories of many past drivers.</p>
+                    <p class="lead">Here at Jetsons Retro Autoshop we specialise in the restoration of older/classic cars. Our team transforms former automotive legends back into their old selves. Work with us to preserve the memories of many past drivers.</p>
                 </div>
             </div>
         </div>
